<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/deals_item_shadow"/>

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/icon_back"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/margin_start_200"/>

        <include
            android:id="@+id/bookImageLayout"
            layout="@layout/image_card_layout"
            android:layout_width="200dp"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bookImageLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_start_200"
            android:layout_marginTop="@dimen/margin_100"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Neon Genesis Evangelion: Shinji Ikari Raising Project"
            android:fontFamily="@font/basier_circle_semibold"
            android:textSize="@dimen/text_size_regular_800"
            android:textColor="@color/black_200"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/bookTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hits_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/margin_start_200"
                    android:layout_marginTop="@dimen/margin_100"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/hits_text"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/dsc_grey"/>

                <TextView
                    android:id="@+id/hits_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/hits_title"
                    android:layout_marginStart="@dimen/margin_start_200"
                    app:layout_constraintStart_toEndOf="@id/hits_title"
                    tools:text="1435"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/black_400"/>

                <TextView
                    android:id="@+id/alias_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/margin_start_200"
                    android:layout_marginTop="@dimen/margin_100"
                    app:layout_constraintStart_toEndOf="@id/hits_value"
                    android:text="@string/alias_text"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/dsc_grey"/>

                <TextView
                    android:id="@+id/alias_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/hits_title"
                    android:layout_marginStart="@dimen/margin_start_200"
                    app:layout_constraintStart_toEndOf="@id/alias_title"
                    tools:text="1435"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/black_400"/>

                <TextView
                    android:id="@+id/updated_on_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/hits_title"
                    android:layout_marginStart="@dimen/margin_start_200"
                    android:layout_marginTop="@dimen/margin_100"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/updated_on"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/dsc_grey"/>

                <TextView
                    android:id="@+id/updated_on_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/updated_on_text"
                    android:layout_marginStart="@dimen/margin_start_200"
                    app:layout_constraintStart_toEndOf="@id/updated_on_text"
                    tools:text="1435"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/black_400"/>

                <TextView
                    android:id="@+id/overview_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/updated_on_text"
                    android:layout_marginStart="@dimen/margin_start_200"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/margin_start_200"
                    android:text="@string/overview"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/dsc_grey"/>

                <TextView
                    android:id="@+id/story_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/overview_text"
                    android:layout_marginHorizontal="@dimen/margin_start_200"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/margin_100"
                    android:text="@string/lopis_ipsum"
                    android:padding="@dimen/margin_100"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textSize="@dimen/text_size_regular_600"
                    android:textColor="@color/black_400"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>